Fixed styles so more visible on a phone

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -44,12 +44,13 @@ body {
 
    .heading {
       text-align: center;
-      font-size: 28px;
+      font-size: 26px;
       letter-spacing: 1px;
+      padding-top: 25px;
    }
 
    .main_text {
-      font-size: 12px;
+      font-size: 21px;
       text-align: justify;
       padding: 30px;
    }
